<resources>
    <string name="app_name">Car_Note</string>
    <string name="wrrrrumm">wrrrrumm !!!</string>
    <string name="sign_up">sign up</string>
    <string name="type_your_email">type your email</string>
    <string name="register">register</string>
    <string name="repeat_your_password">repeat your password</string>
    <string name="type_your_last_name">type your last name</string>
    <string name="i_already_have_account">i already have account</string>
    <string name="type_your_name">type your name</string>
    <string name="register_logo">register logo</string>
    <string name="type_your_password">type your password</string>
    <string name="Im_choosing_this">I\'m choosing this</string>
    <string name="Please_select_the_vehicle_you_are_using">
        Please select the vehicle you are using</string>
    <string name="add_new_car">add new car</string>
    <string name="type_yours_car_brand">type yours car brand</string>
    <string name="type_yours_car_model">type yours car model</string>
    <string name="type_yours_car_color">type yours car color</string>
    <string name="type_yours_car_plate_number">type yours car plate number</string>
    <string name="turn_back">turn back</string>
    <string name="define_body_click"> define body (click)</string>
    <string name="carpickparenticons">carPickParentIcons</string>
    <string name="login_picture">login picture</string>
    <string name="main_dashboard_image">Main dashboard image</string>
    <string name="add_new">add new</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="choose_category">choose category</string>
    <string name="generate_pdf_file">generate pdf file</string>
    <string name="sort_events">sort events</string>
    <string name="carmaindashboardicondescripton">carMainDashboardIconDescripton</string>
    <string name="get_back_to_car_pick">get back to car pick</string>
    <string name="add_new_event_icon">add new event icon</string>
    <string name="type_your_event_title">type your event title</string>
    <string name="describe_your_new_event">describe your new event</string>
    <string name="add_new_event">add new event</string>
    <string name="pick_type">pick type</string>
    <string name="pick_body">pick body</string>
    <string name="edit_picked_event">edit picked event</string>
    <string name="add_new_picture">add new picture</string>
    <string name="delete_picture">delete picture</string>
    <string name="delete_icon">X</string>
    <string name="make_picture">make picture</string>
    <string name="edit_event">edit event</string>
</resources>