<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/registerLayout">
    <ImageView
            android:layout_width="332dp"
            android:layout_height="304dp" app:srcCompat="@drawable/carnote_sec_240"
            android:id="@+id/registerIcon"
            android:layout_marginTop="17dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/register_logo"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/type_your_email"
            android:id="@+id/registerEmail"
            android:layout_marginTop="160dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="emailAddress"
            tools:ignore="TextFields"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/type_your_name"
            android:id="@+id/registerName"
            android:layout_marginTop="225dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="name"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/type_your_last_name"
            android:id="@+id/registerLastName"
            android:layout_marginTop="290dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="last name"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:id="@+id/registerPasswordFirst"
            android:layout_marginTop="355dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/type_your_password"
            android:autofillHints="password"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:id="@+id/registerPasswordSecond"
            android:layout_marginTop="420dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/repeat_your_password"
            android:autofillHints="repeat password"/>
    <Button
            android:text="@string/register"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:id="@+id/registerButtonRegister"
            android:layout_marginTop="520dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>
    <Button
            android:text="@string/i_already_have_account"
            android:textSize="12sp"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:id="@+id/registerButtonLogin"
            android:layout_marginTop="590dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="110dp"/>
</RelativeLayout>