<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/carAddLayout">
    <ImageView
            android:id="@+id/eventAddIcon"
            app:srcCompat="@drawable/carnote_add_new_event_240"
            android:layout_width="332dp"
            android:layout_height="304dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="39dp"
            android:contentDescription="@string/add_new_event_icon"/>
    <EditText
            android:id="@+id/eventAddTitle"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/type_your_event_title"
            android:gravity="center"
            android:layout_marginTop="160dp"
            android:layout_marginStart="80dp"
            android:autofillHints="brand"
            tools:ignore="TextFields"/>
    <EditText
            android:id="@+id/eventAddDescription"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:background="@drawable/event_text_field_border"
            android:inputType="textMultiLine|textNoSuggestions"
            android:hint="@string/describe_your_new_event"
            android:gravity="center"
            android:layout_marginTop="225dp"
            android:layout_marginStart="41dp"
            android:autofillHints="model"/>
    <TextView
            android:id="@+id/eventAddTextView"
            android:text="@string/pick_type"
            android:textSize="23sp"
            android:textAllCaps="true"
            android:gravity="center_vertical"
            android:layout_width="120dp"
            android:layout_height="39dp"
            android:layout_marginTop="450dp"
            android:layout_marginStart="40dp"/>
    <Spinner
            android:id="@+id/eventAddSpinner"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:layout_marginStart="180dp"
            android:gravity="center"
            android:padding="8dp"
            android:popupBackground="@color/transparent"
            android:spinnerMode="dialog"/>
    <Button
            android:id="@+id/eventAddButtonAddNewEvent"
            android:text="@string/add_new_event"
            android:textSize="18sp"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="530dp"
            android:layout_marginStart="55dp"/>
    <Button
            android:id="@+id/eventAddButtonBack"
            android:text="@string/turn_back"
            android:textSize="16sp"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="590dp"
            android:layout_marginStart="105dp"/>
</RelativeLayout>