<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/carAddLayout">
    <ImageView
            android:layout_width="332dp"
            android:layout_height="304dp" app:srcCompat="@drawable/carnote_add_new_car_240"
            android:id="@+id/carAddIcon"
            android:layout_marginTop="17dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/add_new_car"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/type_yours_car_brand"
            android:id="@+id/carAddBrand"
            android:layout_marginTop="160dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="brand"
            tools:ignore="TextFields"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/type_yours_car_model"
            android:id="@+id/carAddModel"
            android:layout_marginTop="225dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="model"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/type_yours_car_color"
            android:id="@+id/carAddColor"
            android:layout_marginTop="290dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="color"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/type_yours_car_plate_number"
            android:id="@+id/carAddPlateNumber"
            android:layout_marginTop="355dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="plate number"
            tools:ignore="TextFields"/>
    <Button
            android:text="@string/add_new_car"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:id="@+id/carAddButtonAddNewCar"
            android:layout_marginTop="450dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>
    <Button
            android:text="@string/turn_back"
            android:textSize="12sp"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:id="@+id/carAddButtonBack"
            android:layout_marginTop="520dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="110dp"/>
</RelativeLayout>