<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginLayout"
        android:background="@color/white">

    <ImageView
            android:id="@+id/loginImage"
            android:layout_width="500dp"
            android:layout_height="330dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/carnote360"/>
    <EditText
            android:id="@+id/loginUserEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="300dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:inputType="textEmailAddress"
            android:hint="@string/type_your_email"/>
    <EditText
            android:id="@+id/loginUserPass"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="370dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:inputType="textPassword"
            android:hint="@string/type_your_password"/>
    <Button
            android:id="@+id/loginButton"
            android:text="@string/wrrrrumm"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="470dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>
    <Button
            android:id="@+id/loginSignUpButton"
            android:text="@string/sign_up"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="530dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"/>
</RelativeLayout>