<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/userCarsLayout"
        android:background="@color/white">

    <ImageView
            android:id="@+id/userCarsImage"
            android:layout_width="500dp"
            android:layout_height="330dp"
            android:layout_marginTop="-50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/carnote360"
            android:importantForAccessibility="no"/>
    <TextView
            android:id="@+id/userCarsTextView"
            android:text="@string/Please_select_the_vehicle_you_are_using"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_width="500dp"
            android:layout_height="60dp"
            android:layout_marginTop="210dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"/>
    <ListView
            android:id="@+id/userCarsListOfCars"
            android:divider="@color/black"
            android:padding="8dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:layout_width="500dp"
            android:layout_height="260dp"
            android:layout_marginTop="290dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/list_view_border"/>
    <Button
            android:id="@+id/userCarsButtonChooseCar"
            android:text="@string/Im_choosing_this"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="570dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"/>
    <Button
            android:id="@+id/userCarsButtonAddCar"
            android:text="@string/add_new_car"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="630dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"/>
</RelativeLayout>